Use isEmpty for checking if collection is empty