@@ -420,11 +420,11 @@ public class MockKinesisClient
 
     protected ShardIterator getNextShardIterator(ShardIterator previousIter, List<Record> records)
     {
-        if (records.size() == 0) {
+        if (records.isEmpty()) {
             return previousIter;
         }
 
-        Record rec = records.get(records.size() - 1);
+        Record rec = records.getLast();
         int lastSeq = Integer.valueOf(rec.getSequenceNumber());
         return new ShardIterator(previousIter.streamId, previousIter.shardIndex, lastSeq + 1);
     }
